Bug 180339 Can't send message if receiver contain Chinese character. Author=joe@numa.com.tw, r=ducarroz, sr=sspitzer.