mailnews/compose/src/nsMsgSend.cpp
@@ -3267,7 +3267,7 @@ nsMsgComposeAndSend::DeliverFileAsMail()
     if (collectAddresses)
       addressCollecter->CollectAddress(mCompFields->GetCc(), PR_TRUE);
   }
-  if (mCompFields->GetBcc() && *mCompFields->GetBcc(), PR_TRUE) {
+  if (mCompFields->GetBcc() && *mCompFields->GetBcc()) {
     if (*buf2) PL_strcat (buf2, ",");
       PL_strcat (buf2, mCompFields->GetBcc());
     if (collectAddresses)
